| Summary: | ASTERISK-30441: func_json: Fix JSON parsing of complex objects | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2023-02-26 09:38:59.000-0600 | Date Closed: | 2023-03-16 10:42:11 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Functions/General |
| Versions: | 20.1.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fixes small parsing issue with func_json | ||
| Comments: | By: Asterisk Team (asteriskteam) 2023-02-26 09:39:01.573-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2023-03-16 10:42:12.097-0500 Change 19983 merged by Joshua Colp: func_json: Fix JSON parsing issues. [https://gerrit.asterisk.org/c/asterisk/+/19983|https://gerrit.asterisk.org/c/asterisk/+/19983] By: Friendly Automation (friendly-automation) 2023-03-16 10:42:23.717-0500 Change 19984 merged by Joshua Colp: func_json: Fix JSON parsing issues. [https://gerrit.asterisk.org/c/asterisk/+/19984|https://gerrit.asterisk.org/c/asterisk/+/19984] By: Friendly Automation (friendly-automation) 2023-03-16 10:42:43.365-0500 Change 19928 merged by Joshua Colp: func_json: Fix JSON parsing issues. [https://gerrit.asterisk.org/c/asterisk/+/19928|https://gerrit.asterisk.org/c/asterisk/+/19928] | ||